--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "tsnd --respawn --transpile-only src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/pg": "^8.10.2",
     "@types/uuid": "^9.0.3",
